Fixed bug #28386 (wordwrap() wraps lines 1 character too soon).